# FeatherFly

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  banner.txt  config.example.yml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml  security.yml
application/: Cargo.toml  build.rs
application/src/: actions.rs  api_spec.rs  config.rs  daemon.rs  daemon_control.rs  docs.rs  feature_status.rs  lib.rs  main.rs  probe_guard.rs  response.rs  update.rs
application/src/backups/: mod.rs
application/src/cache/: mod.rs
application/src/commands/: configure.rs  diagnostics.rs  docs.rs  install.rs  mod.rs  plugin.rs  service_install.rs  update.rs  version.rs
application/src/controllers/: containers.rs  docker.rs  download.rs  eggs.rs  health.rs  metrics.rs  mod.rs  proxy.rs  site_ws.rs  sites.rs  stats.rs  upload.rs
application/src/controllers/system/: audit.rs  cloudpanel.rs  config.rs  features.rs  mod.rs  overview.rs  plugins.rs  restart.rs  root.rs  update.rs  upgrade.rs
application/src/databases/: mod.rs  service.rs
application/src/deployments/: blue_green.rs  health.rs  mod.rs
application/src/dns/: mod.rs
application/src/docker/: bootstrap.rs  containers.rs  exec.rs  images.rs  install.rs  logs.rs  mod.rs  network.rs  paths.rs  security.rs  stats.rs  volume_shell.rs  volumes.rs
application/src/eggs/: config_files.rs  definition.rs  install.rs  mod.rs  pterodactyl.rs
application/src/files/: mod.rs  service.rs
application/src/ftp/: mod.rs  service.rs
application/src/hosting/: error_pages.rs  mod.rs  ports.rs  reconcile.rs  service.rs  shared.rs  shared_db.rs  stats.rs
application/src/mail/: mod.rs  service.rs
application/src/middlewares/: auth.rs  mod.rs  probe.rs  request_id.rs
application/src/plugins/: events.rs  middleware.rs  mod.rs  request_middleware.rs  routes.rs  schema.rs
application/src/proxy/: bootstrap.rs  mod.rs  traefik.rs
application/src/remote/: backoff.rs  http.rs  jwt.rs  mod.rs
application/src/routes/: download.rs  health.rs  mod.rs  upload.rs
application/src/routes/api/: containers.rs  docker.rs  eggs.rs  metrics.rs  mod.rs  proxy.rs  sites.rs  stats.rs
application/src/routes/api/system/: audit.rs  cloudpanel.rs  config.rs  features.rs  mod.rs  overview.rs  plugins.rs  restart.rs  update.rs  upgrade.rs
application/src/scheduler/: mod.rs  runner.rs  service.rs
application/src/site_websocket/: handler.rs  mod.rs
application/src/sites/: log_store.rs  mod.rs  routing.rs  service.rs  state.rs
application/src/templates/: mod.rs
application/src/utils/: actions.rs  audit.rs  auth.rs  identity.rs  logging.rs  mod.rs  plugin_events.rs  response.rs  update.rs
application/src/websocket/: dispatcher.rs  messages.rs  mod.rs  panel.rs
application/tests/: bare_daemon.rs  docker_modes.rs  eggs.rs  fixtures.rs  hosting_shared.rs  jwt_flows.rs  plugin_event_wiring.rs  plugin_hooks.rs  plugin_payloads.rs  site_lifecycle.rs  unit_pure.rs
docgen/: Cargo.toml
docgen/src/: api.rs  html.rs  lib.rs  plugins.rs  plugins_txt.rs  search.rs  sitemap.rs  tests.rs
docs/: index.html  plugins-reference.txt  robots.txt  search-index.json  sitemap.xml
docs/api/: endpoints.html  index.html  openapi.json
docs/plugins/: architecture.html  events.html  example.html  getting-started.html  hooks-roadmap.html  host-api.html  index.html  json-hooks.html  macros.html  overview.html  return-codes.html  source-tree.html  terminology.html
docs/plugins/cloudpanel-hooks/: command.html  index.html
docs/plugins/config-hooks/: index.html  mutate.html
docs/plugins/events/: auth-failed.html  cloudpanel-certificate-install_failed.html  cloudpanel-certificate-install_requested.html  cloudpanel-certificate-installed.html  cloudpanel-command_cancelled.html  cloudpanel-command_failed.html  cloudpanel-command_mutated.html  cloudpanel-command_requested.html  cloudpanel-command_succeeded.html  cloudpanel-database-create_failed.html  cloudpanel-database-create_requested.html  cloudpanel-database-created.html  cloudpanel-database-delete_failed.html  cloudpanel-database-delete_requested.html  cloudpanel-database-deleted.html  cloudpanel-database-export_failed.html  cloudpanel-database-export_requested.html  cloudpanel-database-exported.html  cloudpanel-site-create_failed.html  cloudpanel-site-create_requested.html  cloudpanel-site-created.html  cloudpanel-site-delete_failed.html  cloudpanel-site-delete_requested.html  cloudpanel-site-deleted.html  cloudpanel-user-mfa_disable_failed.html  cloudpanel-user-mfa_disable_requested.html  cloudpanel-user-mfa_disabled.html  cloudpanel-user-password_reset.html  cloudpanel-user-password_reset_failed.html  cloudpanel-user-password_reset_requested.html  cloudpanel-vhost_templates-import_failed.html  cloudpanel-vhost_templates-import_requested.html  cloudpanel-vhost_templates-imported.html  config-loaded.html  daemon-started.html  daemon-starting.html  daemon-stopping.html  index.html  node-identity_generated.html  plugin-loaded.html  (+13 more)
docs/plugins/json-hooks/: index.html  response-actions.html  response-body.html
docs/plugins/request-hooks/: index.html  intercept.html  middleware.html
docs/plugins/routes/: index.html  register.html
examples/eggs/: generic-web.json
featherfly-plugin-sdk/: Cargo.toml
featherfly-plugin-sdk/src/: lib.rs  metadata.rs
plugins/hello/: Cargo.toml
plugins/hello/src/: lib.rs
src/: main.rs
