[workspace]
resolver = "3"
members = ["application", "featherfly-plugin-sdk", "docgen"]
default-members = ["application"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["MythicalSystems Studios"]
repository = "https://github.com/MythicalLTD/featherfly"
homepage = "https://featherpanel.com"
description = "Web hosting daemon for the FeatherPanel ecosystem"
rust-version = "1.95.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
redundant_closure = "allow"
unnecessary_wraps = "allow"
map_unwrap_or = "allow"
needless_raw_string_hashes = "allow"
manual_let_else = "allow"
iter_over_hash_type = "allow"
match_wildcard_for_single_variants = "allow"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.1", features = ["http2"] }
serde = { version = "1.0.138", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2.0"
tokio = { version = "1.43.0", features = ["fs", "net", "signal", "process", "rt-multi-thread"] }
featherfly-plugin-sdk = { path = "featherfly-plugin-sdk", version = "0.1.0" }

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
debug = false

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
strip = true

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
