[package]
name = "featherfly"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version = { workspace = true }
default-run = "featherfly"

[lib]
name = "featherfly"
path = "src/lib.rs"

[[bin]]
name = "featherfly"
path = "src/main.rs"

[[bin]]
name = "featherd"
path = "src/bin/featherd.rs"

[[bin]]
name = "generate-docs"
path = "src/bin/generate_docs.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
redundant_closure = "allow"
unnecessary_wraps = "allow"
map_unwrap_or = "allow"
needless_raw_string_hashes = "allow"
manual_let_else = "allow"
iter_over_hash_type = "allow"
match_wildcard_for_single_variants = "allow"

[lints.rust]
unsafe_code = "allow"

[dependencies]
featherfly-plugin-sdk.workspace = true
featherfly-docgen = { path = "../docgen" }
libloading = "0.8.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing-appender = "0.2.3"
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
tokio = { workspace = true }
colored = "3.0.0"
clap = { version = "4.5.37", features = ["derive", "string"] }
serde_norway = "0.9.42"
serde_default = "0.2.0"
arc-swap = "1.9.1"
chrono = { version = "0.4.40", features = ["serde"] }
sysinfo = "0.39.0"
constant_time_eq = "0.5.0"
serde_json = "1.0.139"
sha2 = "0.11.0"
hex = "0.4.3"
semver = "1.0.26"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
http = "1.3.1"
bollard = "0.18.1"
uuid = { version = "1.16.0", features = ["v4"] }
getrandom = "0.3.3"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio-stream = "0.1.17"
cron = "0.15.0"

[dev-dependencies]
tempfile = "3.25.0"

[build-dependencies]
serde = { workspace = true }
