[package]
name = "featherfly-docgen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
featherfly-plugin-sdk = { path = "../featherfly-plugin-sdk" }
serde = { workspace = true }
serde_json = "1.0.139"
utoipa = { workspace = true }
pulldown-cmark = "0.13.0"
