[package]
name = "featherfly-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SDK for building FeatherFly dynamic plugins"
rust-version = { workspace = true }

[lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
too_many_lines = "allow"
redundant_closure = "allow"
unnecessary_wraps = "allow"
map_unwrap_or = "allow"
needless_raw_string_hashes = "allow"
manual_let_else = "allow"
iter_over_hash_type = "allow"
match_wildcard_for_single_variants = "allow"

[lints.rust]
unsafe_code = "allow"

[lib]
